--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -271,9 +271,9 @@
             <img src="~/images/footerLoginIcon.png" alt="Logo" class="sidebar-logo">
             
             <div class="sidebar-nav">
-                <button class="sidebar-btn active" title="Data"><i class='bx bx-grid'></i></button>
+                <button class="sidebar-btn active" title="Data"><i class='bx bx-home'></i></button>
                 <button class="sidebar-btn" title="Feedback"><i class='bx bx-comment'></i></button>
-                <button class="sidebar-btn" title="Layout"><i class='bx bx-layout'></i></button>
+                <a href="@Url.Action("Create", "Admin")" class="sidebar-btn" title="Create User"><i class='bx bx-plus'></i></a>
             </div>
 
             <div class="sidebar-bottom">
